# utf8proc

./: CMakeLists.txt  utf8proc_data.c
cmake/: utf8proc-config.cmake.in
